# CppGenericWatchdog

./: CMakeLists.txt  README.md  build_test.sh
.github/workflows/: c-cpp.yml  codeql-analysis.yml
interface/: IWatchdogMonitor.h  IwatchdogMonitor.h
src/: WatchdogMonitor.cpp  WatchdogMonitor.h  main.cpp
test/: WatchdogTest.cpp  WatchdogTest.h
